--- a/README.Rmd
+++ b/README.Rmd
@@ -17,21 +17,21 @@ knitr::opts_chunk$set(
 [rex](https://cran.r-project.org/package=rex), and
 [rematch2](https://cran.r-project.org/package=rematch2).**
 
-# regexcite
+# regexcite.show
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of regexcite is to make regular expressions more exciting!
+The goal of regexcite.show is to make regular expressions more exciting!
 It provides convenience functions to make some common tasks with string manipulation and regular expressions a bit easier.
 
 ## Installation
 
-You can install the development version of regexcite from [GitHub](https://github.com/) with:
+You can install the development version of regexcite.show from [GitHub](https://github.com/) with:
       
 ``` r
 # install.packages("devtools")
-devtools::install_github("jennybc/regexcite")
+devtools::install_github("showcy/regexcite.show")
 ```
 
 ## Usage
@@ -48,10 +48,10 @@ stringr::str_split(x, pattern = ",")
 Notice how the return value is a **list** of length one, where the first element holds the character vector of parts.
 Often the shape of this output is inconvenient, i.e. we want the un-listed version.
 
-That's exactly what `regexcite::str_split_one()` does.
+That's exactly what `regexcite.show::str_split_one()` does.
 
 ```{r}
-library(regexcite)
+library(regexcite.show)
 
 str_split_one(x, pattern = ",")
 ```
